feat: add seek pagination
